# pathfinder

./: .gitignore  DEFAULT_HANDLER_SETUP.md  README.md
.github/workflows/: ci.yml  release.yml
extras/: set-pathfinder-default-folder-handler.reg
frontend/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  ai-catalog.json  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/examples/: probe_npu.rs
src-tauri/icons/: icon.icns
src-tauri/pdfium/: VERSION
src-tauri/src/: fantasy_icons.rs  file_drag.rs  file_icons.rs  folder_shell_registry.rs  gpu_detect.rs  imagenet_labels.rs  inference.rs  lib.rs  local_ai.rs  main.rs  retro_icons.rs  sunset_icons.rs  windows_integration.rs  winml_bridge.rs
src-tauri/ui/: fantasy_fx.slint  fantasy_icons.slint  main.slint  retro_fx.slint  retro_icons.slint  sunset_fx.slint  sunset_icons.slint
src-tauri/ui/fonts/: FONT-LICENSES.md
src-tauri/windows/: hooks.nsh
