[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

[lib]
name = "pathfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
open = "5"
base64 = "0.22"
trash = "5"
rayon = "1"
walkdir = "2"
notify = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
sha2 = "0.10"
hex = "0.4"
zip = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
