[package]
name = "pathfinder"
version = "0.4.4"
edition = "2024"

[lib]
name = "pathfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
slint-build = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
slint = "1"
i-slint-backend-winit = "1"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
open = "5"
base64 = "0.22"
trash = "5"
rayon = "1"
walkdir = "2"
notify = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
sha2 = "0.10"
hex = "0.4"
zip = "2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
memchr = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
