[package]
name = "pathfinder"
version = "0.9.0"
edition = "2024"

[lib]
name = "pathfinder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
slint-build = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
slint = "1"
# Default femtovg/OpenGL renderer. Skia would be faster but its bundled ICU
# duplicates symbols with the windows-rs crate (`u_memcmp`, `u_unescapeAt`,
# etc.) — link fails. Stick with femtovg.
i-slint-backend-winit = "1"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
base64 = "0.22"
trash = "5"
rayon = "1"
walkdir = "2"
notify = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "ico", "tiff", "tga"] }
sha2 = "0.10"
hex = "0.4"
zip = "2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
memchr = "2"
once_cell = "1.19"
# Updater: HTTPS to GitHub API without shelling to PowerShell. ureq 2.x default
# features bundle rustls + rustls-native-certs (system trust store on Windows),
# which the runtime actually picks up — opting out of defaults and only picking
# `native-tls` left the binary with no TLS backend wired in. Keep defaults on so
# HTTPS works out of the box.
ureq = { version = "2.12", features = ["json"] }
tokenizers = "0.20"
ndarray = { version = "0.17", default-features = false, features = ["std"] }

# Windows: ONNX Runtime is not linked into the main binary; the Local AI
# installer downloads Microsoft.ML.OnnxRuntime.DirectML and we `init_from`
# the extracted onnxruntime.dll next to the models.
[target.'cfg(windows)'.dependencies]
windows-core = "0.62"
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "load-dynamic",
    "api-24",
    "directml",
] }
windows = { version = "0.62", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_NetworkManagement_WNet",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }

# Non-Windows dev/CI: keep compile-time ORT fetch (no separate runtime zip yet).
[target.'cfg(not(windows))'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
    "api-24",
] }

[profile.release]
# Parallelizable LTO: ~95% the runtime perf of full LTO, but compiles 5–10× faster
# because thin-LTO splits the work across all CPU cores.
codegen-units = 16
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
incremental = false

# Fast dev runtime: optimize all dependencies even in debug builds.
# Compiles slowly the first time, then fast incrementals + near-release runtime speed.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
